# stockhelper

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  fibo.py  journal.py  main.py  main_stock.py  mainstock.py  pyproject.toml  run  scanner_search.py  stock  stockhelperprogram.py  stockhelperprogram.spec  triangle_search.py
COMMODITIES/: commoditieshelperLONG.py  commoditieshelperSHORT.py
FOREX/: forexhelperLONG.py  forexhelperSHORT.py
STOCK/: stockhelperprogram.py
Trojpolowki/: fibo.md  ichimoku.md
chart_program/: README.md  __init__.py  __main__.py  chart_loader.py  chart_ui.py  config_writer.py  instrument_detector.py  level_selector.py  lightweight_chart_ui.py  main.py  triangle_scanner.py
chart_tools/: level_selector.py
core/: __init__.py  calculator.py  display.py  factory.py  risk_manager.py
scripts/: install-stock-command.sh
strategies/: base_strategy.py  commodities.py  forex.py  stock.py
tests/: test_candlestick_patterns.py  test_chart_instrument_switcher.py  test_chart_loader_freshness.py  test_chart_loader_stooq.py  test_chart_program_main.py  test_commodity_health_retry.py  test_forex_health_retry.py  test_ichimoku_metrics.py  test_stock_cfd_config.py  test_stooq_browser_backend.py  test_stooq_http.py  test_stooq_retry_guards.py  test_stooq_ui_csv.py  test_trojpolowki.py  test_wedge_chart_rendering.py  test_wedge_logic.py
tools/: open_chart_uri.py
utilities/: half_distance_checker.py  output_silence.py  report_console_sink.py  report_server.py  stooq_http.py  stooq_playwright.py  (+1 more)
(+2030 files in other folders)
