[tool.poetry]
name = "stockhelper"
version = "0.1.0"
description = "Trading position sizing, risk analysis, and chart-assisted config workflow for stocks, forex, and commodities."
authors = ["StockHelper Contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = "^0.4.6"
dash = "^3.0.4"
flask = "^3.1.1"
numpy = "^2.2.5"
pandas = "^2.2.3"
plotly = "^6.0.1"
tabulate = "^0.9.0"
tenacity = "^9.1.2"
yfinance = "^0.2.55"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
